# rusty-invoices

./: Cargo.toml  README.md  config.example.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
src/: main.rs
src/cli/: client.rs  error.rs  invoice.rs  menu.rs  mod.rs  user.rs  validation.rs
src/config/: app_config.rs  error.rs  mod.rs  tests.rs
src/core/: app.rs  container.rs  mod.rs
src/errors/: app_error.rs  mod.rs  validation_error.rs
src/models/: client.rs  invoice.rs  item.rs  mod.rs  rules.rs  tests.rs  user.rs
src/repository/: mod.rs  storage.rs
src/services/: client.rs  invoice.rs  mod.rs  pdf.rs
