[package]
name = "rusty-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
chrono = "0.4.31"
uuid = { version = "1.6.1", features = ["v4"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
printpdf = "0.6.0"
rpassword = "7.3.1"
dialoguer = "0.11.0"
console = "0.15.7"
dirs = "5.0.1"
