[package]
name = "rusty-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
chrono = "0.4.31"
uuid = { version = "1.6.1", features = ["v4"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
config = "0.14.0"
thiserror = "1.0.69"
anyhow = "1.0.86"
printpdf = "0.6.0"
console = "0.15.7"
dialoguer = "0.11.0"
dirs = "5.0.1"

[dev-dependencies]
tempfile = "3.8.1"
assert_fs = "1.0.0"
predicates = "3.0.3"
